Updating code to clear majority of warnings.